<resources>
    <string name="app_name">Acesso Aluno</string>
    <string name="user">Usuário:</string>
    <string name="password">Senha:</string>
    <string name="acess">Acesso</string>
    <string name="exit">Sair</string>
    <string name="back">Voltar</string>
    <string name="user_invalid">Não Foi Possível Realizar o login, por favor verifique o seu RGM e senha</string>

    <string name="disciplinas">Disciplinas</string>
    <string name="informacoes_title">Aulas de hoje</string>
    <string name="informacoes_title_no_class">Não há aulas para hoje</string>
    <string name="item_aula_registrar">Registrar presença</string>
    <string name="item_aula_registrada">A Presença já foi registrada!</string>
    <string name="item_aula_inicio">Ínicio:</string>
    <string name="item_aula_fim">Fim:</string>
    <string name="item_aula_professor">Professor:</string>
    <string name="title_activity_informacoes">Informacoes</string>

    <string name="recycler_gps_not_in_university">É Necessário estar na unicid para registrar a presença</string>
    <string name="recycler_gps_fail_location">Não foi possível obter a localização</string>
    <string name="recycler_already_registred">Você já registrou a presença</string>
    <string name="recycler_out_hour">Não foi possível registrar a presença, fora do horario</string>
    <string name="recycler_gps_authorization">É necessário permitir o aplicativo acessar a localização</string>
    <string name="recycler_sucess">Presença registrada com sucesso!</string>
    <string name="recylcer_class_end">Aula Finalizada</string>

    <string name="disciplinas_title">Suas disciplinas</string>
</resources>