<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/backMain"
    tools:context=".MainActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

        <EditText
            android:id="@+id/user"

            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="3"
            android:autofillHints="@string/user"
            android:inputType="text" />

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="3"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/password" />

        <TextView
            android:id="@+id/textUser"

            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/user" />


    </GridLayout>

    <Button
        android:id="@+id/acess"
        android:layout_width="100sp"
        android:layout_height="60sp"
        android:text="@string/acess" />

    <Button
        android:id="@+id/exit"
        android:layout_width="100sp"
        android:layout_height="60sp"
        android:text="@string/exit" />

    <TextView
        android:id="@+id/failMessage"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:text=""
        android:textColor="@color/design_default_color_error" />

</LinearLayout>