<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_informacoes"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_gravity="center_horizontal">
    <TextView
        android:id="@+id/materia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="4dp"
        android:background="#BABABA"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materia">

        <TableRow>

            <TextView
                android:layout_width="96dp"
                android:text="@string/item_aula_inicio" />

            <TextView
                android:id="@+id/inicio"
                android:layout_width="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="96dp"
                android:text="@string/item_aula_fim" />

            <TextView
                android:id="@+id/fim"
                android:layout_width="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="96dp"
                android:text="@string/item_aula_professor" />

            <TextView
                android:id="@+id/professor"
                android:layout_width="290dp" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/item_aula_registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/btn_registrar"/>
</androidx.constraintlayout.widget.ConstraintLayout>